# Evol-Instruct-jp

./: .gitignore  README.md  pyproject.toml
Evol_Instruct_Japanese/: 01_test.ipynb  02_check_diversity.ipynb  03_dataset_tasks.ipynb  04_push_to_hub.ipynb  breadth.py  depth.py  eliminte.py  evol_instruct.py  main.py  mixtral_access.py  utils.py
Evol_Instruct_Japanese/data/: alpaca_seed_tasks_jp.jsonl
Evol_Instruct_Japanese/test_data/: test.jsonl  test_hh-rlhf-ja.jsonl
Evol_Instruct_Japanese/test_output/: test_eliminated.json  test_generated.json
