[tool.poetry]
name = "wizardlm"
version = "0.1.0"
description = ""
authors = ["Hajime Yagihara <eitiwai@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tqdm = "^4.66.4"
openai = "^1.26.0"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
